Compressed Images and Minified HTML for better speeds

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
         <div class="product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
           <div class="">
             <div class="image-holder zoom-effect">
-              <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
+              <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
             </div>
             <div>
               <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
@@ -142,7 +142,7 @@
       <div class="col-lg-7 col-md-12 left-content">
         <div class="collection-item">
           <div class="products-thumb">
-            <img src="{% static 'images/sono-bono-Sz0Sni8pQKc-unsplash.jpg' %}" alt="collection item" class="large-image image-rounded">
+            <img src="{% static 'images/sono-bono-Sz0Sni8pQKc-unsplash.jpg' %}" alt="collection item" class="large-image image-rounded" loading="lazy">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3);" class="large-image rounded"></div>        
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 product-entry">
@@ -159,7 +159,7 @@
       <div class="col-lg-5 col-md-12 right-content flex-wrap">
         <div class="collection-item top-item">
           <div class="products-thumb">
-            <img src="{% static 'images/braden-hopkins-rlfCkv9YM2U-unsplash.jpg' %}" alt="collection item" class="small-image image-rounded img-fluid">
+            <img src="{% static 'images/braden-hopkins-rlfCkv9YM2U-unsplash.jpg' %}" alt="collection item" class="small-image image-rounded img-fluid" loading="lazy">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3);" class="large-image rounded"></div>        
           </div>
           <div class="col-md-6 product-entry">
@@ -174,7 +174,7 @@
         </div>
         <div class="collection-item bottom-item">
           <div class="products-thumb">
-            <img src="{% static 'images/connor-coyne-OgqWLzWRSaI-unsplash.jpg' %}" alt="collection item" class="small-image image-rounded">
+            <img src="{% static 'images/connor-coyne-OgqWLzWRSaI-unsplash.jpg' %}" alt="collection item" class="small-image image-rounded" loading="lazy">
             <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.3);" class="large-image rounded"></div>        
           </div>
           <div class="col-md-6 product-entry">
