--- a/templates/index.html
+++ b/templates/index.html
@@ -101,34 +101,38 @@
     </div>
     <div class="row">
       {% for item in items %}
-        <div class="product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
-          <div class="">
-            <div class="image-holder zoom-effect">
-              <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
-            </div>
-            <div>
-              <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
-              <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
-              <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-              <!-- <p style="color: #2D2D2D;">5.0(10 Reviews)</p> -->
-              <hr>
+      <div class="mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
+            <div class="">
+              <div class="image-holder zoom-effect">
+                <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
+              </div>
               <div>
-                <div class="d-flex">
-                  {% if item.stock == 0 %}                  
-                  <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
+                <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
+                <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
+                <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
+                <!-- <p style="color: #2D2D2D;">5.0(10 Reviews)</p> -->
+                <hr>
+                <div>
+                  <div class="d-flex">
+                    {% if item.stock == 0 %}                  
+                    <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
+                    {% else %}
+                    <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
+                    {% endif %}
+                  </div>
+                  {% if item.stock == 0 %}
+                  <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
                   {% else %}
-                  <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
-                  {% endif %}
+                  <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+                  {% endif %}  
                 </div>
-                {% if item.stock == 0 %}
-                <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                {% else %}
-                <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                {% endif %}  
               </div>
             </div>
           </div>
         </div>
+      </div>
       {% endfor %}
     </div>
     <div class="swiper-pagination"></div>
