chnaged swiper classes

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
     </div>
     <div class="row">
       {% for item in items %}
-      <div class="mySwiper">
+      <div class="swiper main-swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
             <div class="">
