--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           {% for item in items %}
-          <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
+          <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
             <div class="">
               <div class="image-holder zoom-effect">
                 <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
