--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="swiper mySwiper">
+      <div class="swiper main-swiper">
         <div class="swiper-wrapper">
           {% for item in items %}
           <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
