--- a/templates/index.html
+++ b/templates/index.html
@@ -100,10 +100,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="swiper main-swiper">
-        <div class="swiper-wrapper">
+      <div class="">
+        <div class="">
           {% for item in items %}
-          <div class="swiper-slide product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
+          <div class="product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
             <div class="">
               <div class="image-holder zoom-effect">
                 <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
