--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
       <div class="">
         <div class="">
           {% for item in items %}
-          <div class="product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
+          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
             <div class="">
               <div class="image-holder zoom-effect">
                 <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
