--- a/templates/base.html
+++ b/templates/base.html
@@ -263,7 +263,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <script type="text/javascript">
-      const lightbox = GLightbox();
+      // Initialize Glightbox
+      const lightbox = GLightbox({
+        selector: '.glightbox', // class name for the images you want to open in the lightbox
+      });
     </script>
   </body>
 </html>
