--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -19,7 +19,7 @@
             <div class="swiper-wrapper">
               {% for product_image in product_images %}
               <div class="swiper-slide">
-                <a href="{{ product_image.image.url }}" class="glightbox" data-glightbox="height: auto; zoomable: true; draggable: true;"></a>
+                <a href="{{ product_image.image.url }}" class="glightbox" data-glightbox="height: auto; zoomable: true; draggable: true;"><img src="{{ product_image.image.url }}" alt="{{ product_image.product.name }}"/></a>
                 <img src="{{ product_image.image.url }}" alt="{{ product_image.product.name }}" height="100"/>
               </div>
               {% endfor %}
@@ -30,7 +30,7 @@
             <div class="swiper-wrapper">
               {% for product_image in product_images %}
               <div class="swiper-slide">
-                <a href="{{ product_image.image.url }}" class="glightbox" data-glightbox="height: auto; zoomable: true; draggable: true;"></a>
+                <a href="{{ product_image.image.url }}" class="glightbox" data-glightbox="height: auto; zoomable: true; draggable: true;"><img src="{{ product_image.image.url }}" alt="{{ product_image.product.name }}"/></a>
                 <img src="{{ product_image.image.url }}" alt="{{ product_image.product.name }}" height="100"/>
               </div>
               {% endfor %}
