Changed Item Title Text Size

--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -44,7 +44,7 @@
               <div class="">
                 <div class="contact-information">
                   <div class="section-header">
-                    <h3 class="section-title">{{item.name}}</h3>
+                    <h3 class="">{{item.name}}</h3>
                     <h4 class="text-muted">NGN{{item.price}}</h4>
                     <h6 class="text-muted">{{item.kit_type}} {{item.season}}</h6>
                     <p class="text-sm" style="color: green;">In Stock</p>
