Updates to linking

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,10 +106,10 @@
           <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
             <div class="">
               <div class="image-holder zoom-effect">
-                <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg" loading="lazy">
+                <a href="{% url 'item_details' item.pk %}"><img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg"></a>
               </div>
               <div>
-                <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
+                <a href="{% url 'item_details' item.pk %}"><h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3></a>
                 <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
                 <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
                 <!-- <p style="color: #2D2D2D;">5.0(10 Reviews)</p> -->
