--- a/templates/shop.html
+++ b/templates/shop.html
@@ -34,7 +34,7 @@
             <div class="product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
               <div class="">
                 <div class="image-holder zoom-effect">
-                  <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
+                  <a href="{% url 'item_details' item.pk %}"><img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg"></a>
                 </div>
                 <div>
                   <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
