--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,14 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="Adikastakes">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="jersey, arsenal, chelsea, premier league, la liga, tiktok, youtube, ligue one, messi, ronaldo, bellingham, madrid, liverpool">
     <meta name="description" content="{{description}}">
+    <meta name="twitter:card" content="summary">
+    <!-- <meta name="twitter:url" content="https://davidwalsh.name/twitter-cards"> -->
+    <meta name="twitter:title" content="Adikastakes | Sports Apparel and Equipment Store">
+    <meta name="twitter:description" content="We're Nigeria's biggest sports vendor offering you everything you need to represent, play with style and show your love for the game. Show your love without breaking the bank">
+    <meta name="twitter:image" content="{% static 'images/twitter.jpg' %}">
+    <link rel="shortcut icon" href="{% static 'images/adika black.svg' %}" type="image/x-icon">
     <link rel="shortcut icon" href="{% static 'images/adika black.svg' %}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'icomoon/icomoon.css' %}">
