--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     <!-- <meta name="twitter:url" content="https://davidwalsh.name/twitter-cards"> -->
     <meta name="twitter:title" content="Adikastakes | Sports Apparel and Equipment Store">
     <meta name="twitter:description" content="We're Nigeria's biggest sports vendor offering you everything you need to represent, play with style and show your love for the game. Show your love without breaking the bank">
-    <meta property="twitter:image" content="{% static 'images/twitter.jpg' %}" />
-    <meta property="og:image" content="{% static 'images/twitter.jpg' %}" />
+    <meta property="twitter:image" content="https://adikasstakes.pythonanywhere.com/static/images/twitter.jpg" />
+    <meta property="og:image" content="https://adikasstakes.pythonanywhere.com/static/images/twitter.jpg" />
     <meta name="twitter:image:width" content="280">
     <meta name="twitter:image:height" content="480">
     <link rel="shortcut icon" href="{% static 'images/adika black.svg' %}" type="image/x-icon">
