--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,7 @@
       <div class="">
         <div class="">
           {% for item in items %}
+          <a href="{% url 'item_details' item.pk %}">
           <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
             <div class="">
               <a href="{% url 'item_details' item.pk %}">
@@ -133,6 +134,7 @@
               </div>
             </div>
           </div>
+          </a>
           {% endfor %}
         </div>
       </div>
