--- a/templates/index.html
+++ b/templates/index.html
@@ -110,10 +110,12 @@
                 <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
               </div>
               <div>
-                <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
+                <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
                 <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
                 <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-                <!-- <p style="color: #2D2D2D;">5.0(10 Reviews)</p> -->
+                {% if item.customizable == True %}
+                <p style="color: green;">Customizable</p>
+                {% endif %}
                 <hr>
                 <div>
                   <div class="d-flex">
