--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -47,10 +47,14 @@
                     <h3 class="">{{item.name}}</h3>
                     <h4 class="text-muted">NGN{{item.price}}</h4>
                     <h6 class="text-muted">{{item.kit_type}} {{item.season}}</h6>
+                    {% if item.stock == 0 %}
+                    <p class="text-sm" style="color: red;">Out of Stock</p>
+                    {% else %}
                     <p class="text-sm" style="color: green;">In Stock</p>
+                    {% endif %}
                   </div>
                   <div>
-                    <form action="/products/item/{{item.id}}#" method="POST">
+                    <form action="/products/item/{{item.id}}#" method="POST" id="form">
                       {% csrf_token %}
                       <p>{{item.description}}</p>
                       {% if item.customizable == True %}
@@ -67,6 +71,9 @@
                           {% endfor %}
                         </select>
                       </div>
+                      {% if item.custom_item_link %}
+                      <a href="{{item.custom_item_link}}#form" class="btn btn-primary">Customize</a> 
+                      {% endif %}
                       <p><b><i class="bi bi-truck fw-bold"></i> Shipping:</b> Usually ships out within two business days</p>
                       {% if item.stock == 0 %}
                       <button type="button" name="submit" class="btn btn-dark btn-full btn-medium" disabled><i class="icon icon-shopping-cart" disabled></i> OUT OF STOCK</button>
@@ -127,16 +134,19 @@
     </div>
     <div class="row">
       {% for item in related_items %}
-        <div class="product-item col-lg-4 col-md-6 col-sm-6 product-rounded padding-small" id="{{item.id}}">
+        <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
+          <a href="{% url 'item_details' item.pk %}">
           <div class="">
             <div class="image-holder zoom-effect">
               <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
             </div>
             <div>
-              <h3 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h3>
+              <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
               <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
               <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
-              <!-- <p style="color: #2D2D2D;">5.0(10 Reviews)</p> -->
+              {% if item.customizable == True %}
+              <p style="color: green;">Customizable</p>
+              {% endif %}
               <hr>
               <div>
                 <div class="d-flex">
@@ -154,6 +164,7 @@
               </div>
             </div>
           </div>
+          </a>
         </div>
       {% endfor %}
     </div>
