--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,13 +31,13 @@
             <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
           </div>
           {% for item in items %}
-          <div class="product-item h-100 box col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
+          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mt-2" id="{{item.id}}">
             <a href="{% url 'item_details' item.pk %}">
-            <div class="box">
+            <div class="">
               <div class="image-holder zoom-effect">
                 <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
               </div>
-              <div class="d-flex flex-column">
+              <div class="">
                 <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
                 <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
                 <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
@@ -68,25 +68,33 @@
       </section>
       <div class="">
         <nav aria-label="Page navigation">
-          <ul class="pagination">
+          <ul class="pagination justify-content-center">
+            {% if items.has_previous %}
               <li class="page-item">
-                  <a class="page-link btn btn-outline-dark" href="#" aria-label="Previous">
-                      <i class="bi bi-chevron-double-left"></i>
-                  </a>
+                <a class="page-link btn btn-outline-dark" href="?page=1{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                  <i class="bi bi-chevron-double-left"></i>
+                </a>
               </li>
-              {% for num in items.paginator.page_range %}
-                  <li class="page-item">
-                      <a class="page-link btn btn-outline-dark {% if items.number == num %}active{% endif %}" href="?page={{ num }}">{{ num }}</a>
-                  </li>
-              {% endfor %}
+            {% endif %}
+      
+            {% for num in items.paginator.page_range %}
+              <li class="page-item {% if items.number == num %}active{% endif %}">
+                <a class="page-link btn btn-outline-dark" href="?page={{ num }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                  {{ num }}
+                </a>
+              </li>
+            {% endfor %}
+      
+            {% if items.has_next %}
               <li class="page-item">
-                  <a class="page-link btn btn-outline-dark" href="#" aria-label="Next">
-                      <i class="bi bi-chevron-double-right"></i>
-                  </a>
+                <a class="page-link btn btn-outline-dark" href="?page={{ items.paginator.num_pages }}{% if request.GET.league %}&league={{ request.GET.league }}{% endif %}{% if request.GET.product_type %}&product_type={{ request.GET.product_type }}{% endif %}{% if request.GET.kit_type %}&kit_type={{ request.GET.kit_type }}{% endif %}{% if request.GET.version %}&version={{ request.GET.version }}{% endif %}{% if request.GET.season %}&season={{ request.GET.season }}{% endif %}{% if request.GET.min_price %}&min_price={{ request.GET.min_price }}{% endif %}{% if request.GET.max_price %}&max_price={{ request.GET.max_price }}{% endif %}">
+                  <i class="bi bi-chevron-double-right"></i>
+                </a>
               </li>
+            {% endif %}
           </ul>
-        </nav>      
-      </div>
+        </nav>
+      </div>      
     </div>
     </div>        
   </div>      
