Updated BAse Search Parameters

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
             <a href="{% url 'shop' %}?version=RETRO" title="Retro Kits">Retro Kits</a>
           </li>
           <li class="cat-list-item">
-            <a href="{% url 'shop' %}?customizable" title="Customizable Kits">Customizable Kits</a>
+            <a href="{% url 'shop' %}?customizable=True" title="Customizable Kits">Customizable Kits</a>
           </li>
           <li class="cat-list-item">
             <a href="{% url 'shop' %}?kit_type=HOME" title="Home Kits">Home Kits</a>
