Removed Broken Class

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="">
 
-      <section id="selling-products" class="">
+      <section id="" class="">
         <div class="">
           <h2><i>Beyond Infinity</i></h2>
           <p>As Nigeria's biggest sports vendor, our products cuts far and wide across all of the</p>
