--- a/templates/shop.html
+++ b/templates/shop.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% for item in items %}
-        <div class="col mb-3">
+        <div class="col-lg-4 col-md-6 col-sm-6 padding-small mb-3 mt-1 g-2">
             <div class="card">
                 <a href="{% url 'item_details' item.pk %}">
                     <img src="{{item.featured_image.url}}" class="card-img-top" alt="">
