--- a/templates/shop.html
+++ b/templates/shop.html
@@ -29,35 +29,42 @@
         <div class="border-bottom">
           <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        {% for item in items %}
-        <div class="col-lg-4 col-md-6 col-sm-6 padding-small mb-3 mt-1 g-2">
-            <div class="card">
-                <a href="{% url 'item_details' item.pk %}">
-                    <img src="{{item.featured_image.url}}" class="card-img-top" alt="">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">{{item.name}}</h5>
-                    <p class="card-text text-muted"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
-                    <p class="card-text">{{item.kit_type}} ({{item.season}})</p>
-                    {% if item.customizable == True %}
-                    <p style="color: green;">Customizable</p>
+        <div class="row">
+          {% for item in items %}
+          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mb-3 mt-1 g-2" id="{{item.id}}">
+            <a href="{% url 'item_details' item.pk %}">
+            <div class="">
+              <div class="image-holder zoom-effect">
+                <img src="{{item.featured_image.url}}" alt="" class="image-rounded image-bg">
+              </div>
+              <div class="">
+                <h4 class="fw-bold" style="color: #2D2D2D;">{{item.name}}</h4>
+                <p class="text-muted" style="color: #2D2D2D;"><b>NGN{{item.price}}</b> <strike>NGN{{item.initial_price}}</strike></p>
+                <p style="color: #2D2D2D;">{{item.kit_type}} ({{item.season}})</p>
+                {% if item.customizable == True %}
+                <p style="color: green;">Customizable</p>
+                {% endif %}
+                <hr>
+                <div>
+                  <div class="d-flex">
+                    {% if item.stock == 0 %}                  
+                    <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</a> 
+                    {% else %}
+                    <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a> 
                     {% endif %}
-                    <hr>
-                    <div class="d-grid">
-                        {% if item.stock == 0 %}
-                        <button class="btn btn-primary" disabled><i class="icon icon-shopping-cart"></i> Out of stock</button>
-                        {% else %}
-                        <a href="{% url 'item_details' item.pk %}" class="btn btn-primary"><i class="icon icon-shopping-cart"></i> Add to Cart</a>
-                        {% endif %}
-                        <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
-                    </div>
+                  </div>
+                  {% if item.stock == 0 %}
+                  <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+                  {% else %}
+                  <a href="{% url 'item_details' item.pk %}" class="btn btn-outline-dark"><i class="icon icon-chevron-right"></i> View this product</a>
+                  {% endif %}  
                 </div>
+              </div>
             </div>
+            </a>
+          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
-      </div>
-      
       </div>
     </section>
     <div class="">
