I hope this works 😖

--- a/static/style.css
+++ b/static/style.css
@@ -1989,7 +1989,6 @@ blockquote cite {
 }
 .box{
   height: 100%;
-  
 }
 .product-rounded{
   border-radius: 20px;
@@ -2010,7 +2009,24 @@ blockquote cite {
     margin-bottom: 20px;
 
 }
-
+.product-item .cart-concern {
+    background: var(--light-color);
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 300px;
+    z-index: 9;
+    transition: 0.5s ease-out;
+    padding: 20px 30px;
+    opacity: 0;
+}
+.product-item:hover .cart-concern {
+    bottom: 280px;
+    opacity: 1;
+}
 i.icon.icon-arrow-io {
     font-size: 12px;
 }
