--- a/templates/shop.html
+++ b/templates/shop.html
@@ -29,9 +29,9 @@
         <div class="border-bottom">
           <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
         </div>
-        <div class="row d-flex">
+        <div class="row">
           {% for item in items %}
-          <div class="product-item col-lg-4 col-md-6 col-sm-6 padding-small mb-3 d-flex" id="{{item.id}}">
+          <div class="product-item col-lg-4 col-md-6 col-sm-6" id="{{item.id}}">
             <a href="{% url 'item_details' item.pk %}">
             <div class="">
               <div class="image-holder zoom-effect">
