--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -24,8 +24,7 @@
 
     <section id="selling-products" class="product-store">
       <div class="">
-        <h2><i>Search Results</i></h2>
-        <p></p>
+        <h4>Showing Search Results for <span>{{query}}</span></h4>
         <div class="border-bottom">
           <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasStart" aria-controls="offcanvasStart">Filter & Sort <i class="bi bi-sliders"></i></button>
         </div>
