--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -73,7 +73,7 @@
                       </div>
                       
                       <p><b><i class="bi bi-truck fw-bold"></i> Shipping:</b> Usually ships out within two business days</p>
-                      {% if item.custom_item_link %}
+                      {% if item.custom_item_id %}
                       <div>
                         <a href="/products/item/{{custom_item_id}}" class="btn btn-primary">Customize</a> 
                       </div>
