--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -85,7 +85,7 @@
                       {% endif %}
                       {% if user.is_authenticated %}
                       <div>
-                        <a href="{% url 'add_to_wishlist' item.name %}" class="btn btn-primary d-block">Customize</a> 
+                        <a href="{% url 'add_to_wishlist' item.pk %}" class="btn btn-primary d-block">Customize</a> 
                       </div>
                       {% endif %}
                     </form>
