--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -41,7 +41,7 @@
             <h3 class="fw-bold" style="color: #2D2D2D;">Order History</h3>
             <p class="text-muted lead" style="color: #2D2D2D;">View all of the orders you made, track them and see their status. You can also leave a review while you're at it</p>
             <hr>
-            <a href="{% url 'shop' %}?product_type=JERSEY" class="btn btn-primary">Order History</a>
+            <a href="{% url 'my_orders' %}" class="btn btn-primary">Order History</a>
         </div>
         </div>
     </div>
