Added Alltuh Stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -216,7 +216,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="footer-menu">
                 <h5 class="widget-title">Contact Us</h5>
-                <p>Do you have any questions or suggestions? <a href="#" class="email">adikawebservices@gmail.com</a>
+                <p>Do you have any questions or suggestions? <a href="mailto:adikawebservices@gmail.com" class="email">adikawebservices@gmail.com</a>
                 </p>
                 <p>Do you need assistance? Give us a call. <br>
                   <strong>+234 90 2000 4244</strong>
@@ -226,7 +226,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="footer-menu">
                 <h5 class="widget-title">Your sports needs in one place</h5>
-                <p>Cras mattis sit ornare in metus eu amet adipiscing enim. Ullamcorper in orci, ultrices integer eget arcu. Consectetur leo dignissim lacus, lacus sagittis dictumst.</p>
+                <p>.</p>
                 <div class="social-links">
                   <ul class="d-flex list-unstyled">
                     <li>
