Loaded Social Account in Register Page

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% load socialaccount %}
 <section class="padding-small">
   <div class="container">
     <div class="row align-items-center">
