Added Link to Shipping Page

--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -28,7 +28,7 @@
             <h3 class="fw-bold" style="color: #2D2D2D;">Address Book</h3>
             <p class="text-muted lead" style="color: #2D2D2D;">Your address book contains a list of addresses that you can use to receive shipments from us.</p>
             <hr>
-            <a href="{% url 'shop' %}?product_type=JERSEY" class="btn btn-primary">Address Book</a>
+            <a href="{% url 'shipping_detail' %}" class="btn btn-primary">Address Book</a>
         </div>
         </div>
     </div>
